--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,72 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
-</ion-header>
+<!--
+  Generated template for the HomePage page.
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  See http://ionicframework.com/docs/components/#navigation for more info on
+  Ionic pages and navigation.
+-->
+
+<ion-content>
+  <div class="profile-picture-container" >
+    <img src="./assets/imgs/cover-profile-3.png" style="width:100%">
+
+    <div text-center>
+      <img class="profile-picture" src="{{taxiPhoto}}">
+    </div>
+    <ion-grid>
+      <ion-row  justify-content-center align-items-center>
+    <ion-col text-center>
+      <p class="username">{{taxiName}}</p>
+      <p>{{con_id}}  
+        <ion-badge *ngIf="state=='ว่าง'" style="background-color:green" >  พร้อมรับงาน</ion-badge>
+        <ion-badge *ngIf="state=='ไม่ว่าง'" style="background-color:red" >  ปิดรับงาน</ion-badge>
+      </p> 
+    </ion-col>
+      </ion-row>
+    </ion-grid>
+
+    <ion-card>
+      <ion-grid>
+        <ion-row  justify-content-center align-items-center>
+          <div  *ngIf="state=='ว่าง'" >
+     <img tapable (press)="add()" src="./assets/icon/power_on.svg" style="width:100px;position:absolute;margin-left:40px;margin-top:43px" />
+  
+          <circle-progress
+          [percent]="symptomScore"
+          [radius]="70"
+          [outerStrokeWidth]="16"
+          [innerStrokeWidth]="0"
+          [outerStrokeColor]="'#78C000'"
+          [innerStrokeColor]="'#C7E596'"
+          [animation]="true"
+          [animationDuration]="10"
+        ></circle-progress>
+      </div>
+        <div *ngIf="state=='ไม่ว่าง'">
+          <img tapable (press)="add()"  src="./assets/icon/power_off.svg" style="width:100px;position:absolute;margin-left:40px;margin-top:43px" />
+        <circle-progress 
+        [percent]="symptomScore"
+        [radius]="70"
+        [outerStrokeWidth]="16"
+        [innerStrokeWidth]="0"
+        [outerStrokeColor]="'#DC143C'"
+        [innerStrokeColor]="'#CD5C5C'"
+        [animation]="true"
+        [animationDuration]="10"
+      ></circle-progress>
+  
+    </div>  
+    </ion-row>
+    
+      </ion-grid>
+    </ion-card>
+    <ion-item></ion-item>
+  </div>
+
+
+ 
+  
+ 
+
+
+
 </ion-content>
